# security.ops.center

./: .coverage  .env  .env.example  .gitignore  __init__.py  agent_config.json  edr_gui.py  enhanced_edr_gui.py  file_positions.json  install_requirements.ps1  pyproject.toml  requirements-edr.txt  requirements-sysmon.txt  requirements.txt  setup.cfg  setup.ps1  setup.py  show_sysmon_events.py  siem_dashboard.py  simple_dashboard.py  simple_edr_gui.py  start_edr.py  start_siem.ps1  start_web.ps1  start_web_edr.py  test_api.py  test_dashboard.py  test_edr.py  test_events.json  test_flask.py  test_imports.py  test_siem.py  test_sysmon.py  test_web.py  update_imports.py
config/: .env.example  agentless_config.yaml  compliance_config.yaml  correlation_rules.yaml  dlp_config.yaml  dlp_policy_templates.yaml  edr_config.yaml  edr_config_1.yaml  gdpr.json  hipaa.json  hips_config.yaml  historical_analysis.yaml  log_sources.yaml  minimal_siem.yaml  monitoring_config.yaml  nips_config.yaml  pci_dss.json  pytest.ini  response_config.yaml  siem.yaml  siem_config.yaml  siem_integration.yaml  siem_local.yaml  sox.json  storage_config.yaml  sysmon_config.yaml  threat_detection.yaml  threat_hunting.yaml  ueba_config.yaml  web_config.yaml  windows_event_collector.yaml
data/: siem.db  siem_1.db
dlp/: __init__.py  __main__.py  classifiers.py  core.py  dlp_gui.py  policies.py  sources.py  user_interaction.py
docs/: CHANGELOG.md  CONTRIBUTING.md  INTEGRATION.md  README.md  README_1.md  README_2.md  README_3.md  SOURCES.txt  SOURCES_1.txt  project_structure.md  requirements-web.txt  requirements.txt  requirements_1.txt  requirements_2.txt  requires.txt  requires_1.txt  top_level.txt  top_level_1.txt
edr/: __init__.py  detection_rules.json  edr_agent_gui.py  edr_config.json  edr_gui.py  rule_manager.py  start_web_edr.py  test_threat_detection.py  threat_detection.py  threat_detector.py  threat_intel.json
examples/: dlp_incident_response_demo.py  endpoint_dlp_demo.py  fim_demo.py  network_dlp_demo.py  response_engine_demo.py  (+1 more)
(+677 files in other folders)
