[metadata]
description-file = README.md
license_files = LICENSE

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v -s --cov=siem --cov-report=term-missing
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
source = siem
omit =
    */tests/*
    */__init__.py

[coverage:report]
show_missing = true
skip_covered = true

[coverage:html]
directory = htmlcov
